# tabular_gym

./: LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
algs/: cirl.py  cmdp.py
data/expert_data_sparse/beta0.3/wind_0.5/seed_1/: muE0.csv  muE1.csv  piE0.csv  piE1.csv  rE.csv  sigmaE0true.csv  sigmaE1true.csv
data/expert_data_sparse/beta0.3/wind_0.5/seed_1/1000000_rollouts/: sigmaE0.csv  sigmaE1.csv
data/expert_data_sparse/beta0.3/wind_0.5/seed_1/100000_rollouts/: sigmaE0.csv  sigmaE1.csv
data/expert_data_sparse/beta0.3/wind_0.5/seed_1/10000_rollouts/: sigmaE0.csv  sigmaE1.csv
data/expert_data_sparse/beta0.3/wind_0.5/seed_1/1000_rollouts/: sigmaE0.csv  sigmaE1.csv
env/: cmdp.py  gridworld.py  windy_gridworld.py
experiments/: check_transferability.py  example.ipynb  get_windy_experts.py  multi_expert_irl.py  plotting.py  run_check_transferability.sh  run_get_windy_experts.sh  run_multi_expert_irl.sh
tabular_gym/: __init__.py
tabular_gym.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tabular_gym/algs/: cirl.py  l1_projection.py
tabular_gym/env/: cmdp.py  gridworld.py  windy_gridworld.py
tabular_gym/visualization/: mdp_vis.py
utils/: geometric_tools.py
visualization/: gridworld_vis.py  mdp_vis.py
