[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabular_gym"
version = "0.1.0"
description = "A tabular reinforcement learning gym for constrained MDPs and inverse reinforcement learning"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Andreas Schlaginhaufen", email = "andreas.schlaginhaufen@epfl.ch"},
]
keywords = ["reinforcement learning", "inverse reinforcement learning", "constrained mdp", "tabular"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "einops>=0.3.0",
    "matplotlib>=3.3.0",
    "plotly>=5.0.0",
    "wandb>=0.12.0",
    "sigpy>=0.1.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.urls]
Homepage = "https://github.com/username/tabular-gym"
Repository = "https://github.com/username/tabular-gym"
Documentation = "https://github.com/username/tabular-gym"
"Bug Tracker" = "https://github.com/username/tabular-gym/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tabular_gym*"]
exclude = ["experiments*", "tests*"]

[tool.setuptools.package-data]
tabular_gym = ["*.md", "*.txt"]
